--- a/shop.html
+++ b/shop.html
@@ -1,12 +1,12 @@
 <!doctype html>
-
+<html lang="en">
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Flowershop</title>
   </head>
   
   <body>
-
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BTM'S FLOWER SHOP</a>
@@ -25,8 +25,13 @@
             </form>
           </div>
         </div>
+        <!-- Add product button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Add Product
+        </button>
       </nav>
 
+      <!--Products-->
       <div class="card" style="width: 25rem;">
         <img class="card-img-top" image src="images\r.jpeg" alt="Card image">
         <div class="card-body">
@@ -42,7 +47,7 @@
            <div class="card-body">
              <h5 class="card-title">Tulips</h5>
              <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-             <p class="price">$50 </p>
+             <p class="price">Price: $50 </p>
              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color: rgb(150, 57, 57)">Add to cart</button>
            </div>
          </div>
@@ -56,4 +61,9 @@
              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color: rgb(150, 57, 57)">Add to cart</button>
            </div>
          </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
 </body>
+</html
