--- a/addproduct.html
+++ b/addproduct.html
@@ -96,7 +96,7 @@
 
 
   <div class="registration-link">
-    <a href="#" data-bs-toggle="modal" data-bs-target="#registrationModal">Register</a>
+    <a href="#" data-bs-toggle="modal" data-bs-target="#registrationModal">Registration</a>
 </div>
 </div>
 
@@ -106,6 +106,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="registrationModalLabel">Register</h5>
+            <h5 class="modal-title" id="registrationModalLabel">Registration</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
